// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`calculate simulations-indépendant > Année incomplète 1`] = `
"dirigeant . indépendant . cotisations et contributions . début activité: null
dirigeant . indépendant . revenu professionnel: undefined
dirigeant . rémunération . cotisations: undefined
dirigeant . rémunération . net: undefined
dirigeant . rémunération . net . après impôt: undefined
dirigeant . rémunération . totale: undefined
entreprise . charges: 0
entreprise . chiffre d'affaires: undefined
impôt . montant: undefined"
`;

exports[`calculate simulations-indépendant > Année incomplète 2`] = `
"dirigeant . indépendant . cotisations et contributions . début activité: null
dirigeant . indépendant . revenu professionnel: 2098
dirigeant . rémunération . cotisations: 1722
dirigeant . rémunération . net: 2000
dirigeant . rémunération . net . après impôt: 2000
dirigeant . rémunération . totale: 3722
entreprise . charges: 0
entreprise . chiffre d'affaires: 3722
impôt . montant: 0"
`;

exports[`calculate simulations-indépendant > Année incomplète 3`] = `
"dirigeant . indépendant . cotisations et contributions . début activité: null
dirigeant . indépendant . revenu professionnel: 5194
dirigeant . rémunération . cotisations: 2261
dirigeant . rémunération . net: 5000
dirigeant . rémunération . net . après impôt: 5000
dirigeant . rémunération . totale: 7261
entreprise . charges: 0
entreprise . chiffre d'affaires: 7261
impôt . montant: 0"
`;

exports[`calculate simulations-indépendant > Année incomplète 4`] = `
"dirigeant . indépendant . cotisations et contributions . début activité: null
dirigeant . indépendant . revenu professionnel: 10382
dirigeant . rémunération . cotisations: 4199
dirigeant . rémunération . net: 10000
dirigeant . rémunération . net . après impôt: 10000
dirigeant . rémunération . totale: 14199
entreprise . charges: 0
entreprise . chiffre d'affaires: 14199
impôt . montant: 0"
`;

exports[`calculate simulations-indépendant > Année incomplète 5`] = `
"dirigeant . indépendant . cotisations et contributions . début activité: null
dirigeant . indépendant . revenu professionnel: 103809
dirigeant . rémunération . cotisations: 40389
dirigeant . rémunération . net: 100000
dirigeant . rémunération . net . après impôt: 73493
dirigeant . rémunération . totale: 140389
entreprise . charges: 0
entreprise . chiffre d'affaires: 140389
impôt . montant: 26507"
`;

exports[`calculate simulations-indépendant > Année incomplète 6`] = `
"dirigeant . indépendant . cotisations et contributions . début activité: null
dirigeant . indépendant . revenu professionnel: 1033741
dirigeant . rémunération . cotisations: 242707
dirigeant . rémunération . net: 1000000
dirigeant . rémunération . net . après impôt: 529234
dirigeant . rémunération . totale: 1242707
entreprise . charges: 0
entreprise . chiffre d'affaires: 1242707
impôt . montant: 470766"
`;

exports[`calculate simulations-indépendant > DROM 1`] = `
"dirigeant . indépendant . cotisations et contributions . début activité: null
dirigeant . indépendant . revenu professionnel: undefined
dirigeant . rémunération . cotisations: undefined
dirigeant . rémunération . net: undefined
dirigeant . rémunération . net . après impôt: undefined
dirigeant . rémunération . totale: 20000
entreprise . charges: 0
entreprise . chiffre d'affaires: undefined
impôt . montant: undefined

Notifications affichées : dirigeant . indépendant . cotisations et contributions . exonérations . DROM"
`;

exports[`calculate simulations-indépendant > acre 1`] = `
"dirigeant . indépendant . cotisations et contributions . début activité: 1645
dirigeant . indépendant . revenu professionnel: 51981
dirigeant . rémunération . cotisations: 23076
dirigeant . rémunération . net: 50000
dirigeant . rémunération . net . après impôt: 41240
dirigeant . rémunération . totale: 73076
entreprise . charges: 0
entreprise . chiffre d'affaires: 73076
impôt . montant: 8760"
`;

exports[`calculate simulations-indépendant > activité 1`] = `
"dirigeant . indépendant . cotisations et contributions . début activité: null
dirigeant . indépendant . revenu professionnel: 20763
dirigeant . rémunération . cotisations: 8213
dirigeant . rémunération . net: 20000
dirigeant . rémunération . net . après impôt: 19409
dirigeant . rémunération . totale: 28213
entreprise . charges: 0
entreprise . chiffre d'affaires: 28213
impôt . montant: 591"
`;

exports[`calculate simulations-indépendant > activité 2`] = `
"dirigeant . indépendant . cotisations et contributions . début activité: null
dirigeant . indépendant . revenu professionnel: 20763
dirigeant . rémunération . cotisations: 8232
dirigeant . rémunération . net: 20000
dirigeant . rémunération . net . après impôt: 19409
dirigeant . rémunération . totale: 28232
entreprise . charges: 0
entreprise . chiffre d'affaires: 28232
impôt . montant: 591"
`;

exports[`calculate simulations-indépendant > années précédentes 1`] = `
"dirigeant . indépendant . cotisations et contributions . début activité: null
dirigeant . indépendant . revenu professionnel: 62367
dirigeant . rémunération . cotisations: 27271
dirigeant . rémunération . net: 60000
dirigeant . rémunération . net . après impôt: 48124
dirigeant . rémunération . totale: 87271
entreprise . charges: 0
entreprise . chiffre d'affaires: 87271
impôt . montant: 11876"
`;

exports[`calculate simulations-indépendant > années précédentes 2`] = `
"dirigeant . indépendant . cotisations et contributions . début activité: null
dirigeant . indépendant . revenu professionnel: 51977
dirigeant . rémunération . cotisations: 22919
dirigeant . rémunération . net: 50000
dirigeant . rémunération . net . après impôt: 41121
dirigeant . rémunération . totale: 72919
entreprise . charges: 0
entreprise . chiffre d'affaires: 72919
impôt . montant: 8879"
`;

exports[`calculate simulations-indépendant > années précédentes 3`] = `
"dirigeant . indépendant . cotisations et contributions . début activité: null
dirigeant . indépendant . revenu professionnel: 41591
dirigeant . rémunération . cotisations: 18715
dirigeant . rémunération . net: 40000
dirigeant . rémunération . net . après impôt: 33929
dirigeant . rémunération . totale: 58715
entreprise . charges: 0
entreprise . chiffre d'affaires: 58715
impôt . montant: 6071"
`;

exports[`calculate simulations-indépendant > conjoint collaborateur 1`] = `
"dirigeant . indépendant . cotisations et contributions . début activité: null
dirigeant . indépendant . revenu professionnel: 52109
dirigeant . rémunération . cotisations: 27841
dirigeant . rémunération . net: 50000
dirigeant . rémunération . net . après impôt: 41202
dirigeant . rémunération . totale: 77841
entreprise . charges: 0
entreprise . chiffre d'affaires: 77841
impôt . montant: 8798"
`;

exports[`calculate simulations-indépendant > conjoint collaborateur 2`] = `
"dirigeant . indépendant . cotisations et contributions . début activité: null
dirigeant . indépendant . revenu professionnel: 52120
dirigeant . rémunération . cotisations: 28237
dirigeant . rémunération . net: 50000
dirigeant . rémunération . net . après impôt: 41199
dirigeant . rémunération . totale: 78237
entreprise . charges: 0
entreprise . chiffre d'affaires: 78237
impôt . montant: 8801"
`;

exports[`calculate simulations-indépendant > conjoint collaborateur 3`] = `
"dirigeant . indépendant . cotisations et contributions . début activité: null
dirigeant . indépendant . revenu professionnel: 52188
dirigeant . rémunération . cotisations: 30747
dirigeant . rémunération . net: 50000
dirigeant . rémunération . net . après impôt: 41178
dirigeant . rémunération . totale: 80747
entreprise . charges: 0
entreprise . chiffre d'affaires: 80747
impôt . montant: 8822"
`;

exports[`calculate simulations-indépendant > conjoint collaborateur 4`] = `
"dirigeant . indépendant . cotisations et contributions . début activité: null
dirigeant . indépendant . revenu professionnel: 52003
dirigeant . rémunération . cotisations: 23938
dirigeant . rémunération . net: 50000
dirigeant . rémunération . net . après impôt: 41234
dirigeant . rémunération . totale: 73938
entreprise . charges: 0
entreprise . chiffre d'affaires: 73938
impôt . montant: 8766"
`;

exports[`calculate simulations-indépendant > conjoint collaborateur 5`] = `
"dirigeant . indépendant . cotisations et contributions . début activité: null
dirigeant . indépendant . revenu professionnel: 52003
dirigeant . rémunération . cotisations: 23937
dirigeant . rémunération . net: 50000
dirigeant . rémunération . net . après impôt: 41234
dirigeant . rémunération . totale: 73937
entreprise . charges: 0
entreprise . chiffre d'affaires: 73937
impôt . montant: 8766"
`;

exports[`calculate simulations-indépendant > conjoint collaborateur 6`] = `
"dirigeant . indépendant . cotisations et contributions . début activité: null
dirigeant . indépendant . revenu professionnel: 517934
dirigeant . rémunération . cotisations: 160639
dirigeant . rémunération . net: 500000
dirigeant . rémunération . net . après impôt: 281979
dirigeant . rémunération . totale: 660639
entreprise . charges: 0
entreprise . chiffre d'affaires: 660639
impôt . montant: 218021"
`;

exports[`calculate simulations-indépendant > cotisations facultatives 1`] = `
"dirigeant . indépendant . cotisations et contributions . début activité: null
dirigeant . indépendant . revenu professionnel: 18195
dirigeant . rémunération . cotisations: 12616
dirigeant . rémunération . net: 17384
dirigeant . rémunération . net . après impôt: 17203
dirigeant . rémunération . totale: 30000
entreprise . charges: 0
entreprise . chiffre d'affaires: 30000
impôt . montant: 181"
`;

exports[`calculate simulations-indépendant > cotisations facultatives 2`] = `
"dirigeant . indépendant . cotisations et contributions . début activité: null
dirigeant . indépendant . revenu professionnel: 17957
dirigeant . rémunération . cotisations: 13816
dirigeant . rémunération . net: 16184
dirigeant . rémunération . net . après impôt: 16041
dirigeant . rémunération . totale: 30000
entreprise . charges: 0
entreprise . chiffre d'affaires: 30000
impôt . montant: 143"
`;

exports[`calculate simulations-indépendant > cotisations facultatives 3`] = `
"dirigeant . indépendant . cotisations et contributions . début activité: null
dirigeant . indépendant . revenu professionnel: 20995
dirigeant . rémunération . cotisations: 9816
dirigeant . rémunération . net: 20184
dirigeant . rémunération . net . après impôt: 19555
dirigeant . rémunération . totale: 30000
entreprise . charges: 0
entreprise . chiffre d'affaires: 30000
impôt . montant: 629"
`;

exports[`calculate simulations-indépendant > cotisations facultatives 4`] = `
"dirigeant . indépendant . cotisations et contributions . début activité: null
dirigeant . indépendant . revenu professionnel: 14191
dirigeant . rémunération . cotisations: 6349
dirigeant . rémunération . net: 13651
dirigeant . rémunération . net . après impôt: 13651
dirigeant . rémunération . totale: 20000
entreprise . charges: 0
entreprise . chiffre d'affaires: 20000
impôt . montant: 0"
`;

exports[`calculate simulations-indépendant > cotisations facultatives 5`] = `
"dirigeant . indépendant . cotisations et contributions . début activité: null
dirigeant . indépendant . revenu professionnel: 226271
dirigeant . rémunération . cotisations: 81872
dirigeant . rémunération . net: 218128
dirigeant . rémunération . net . après impôt: 139573
dirigeant . rémunération . totale: 300000
entreprise . charges: 0
entreprise . chiffre d'affaires: 300000
impôt . montant: 78555"
`;

exports[`calculate simulations-indépendant > cotisations facultatives 6`] = `
"dirigeant . indépendant . cotisations et contributions . début activité: null
dirigeant . indépendant . revenu professionnel: 222770
dirigeant . rémunération . cotisations: 85372
dirigeant . rémunération . net: 214628
dirigeant . rémunération . net . après impôt: 137648
dirigeant . rémunération . totale: 300000
entreprise . charges: 0
entreprise . chiffre d'affaires: 300000
impôt . montant: 76980"
`;

exports[`calculate simulations-indépendant > cotisations forfaitaires début d'activité 1`] = `
"dirigeant . indépendant . cotisations et contributions . début activité: 3481
dirigeant . indépendant . revenu professionnel: 35701
dirigeant . rémunération . cotisations: 15653
dirigeant . rémunération . net: 34347
dirigeant . rémunération . net . après impôt: 30471
dirigeant . rémunération . totale: 50000
entreprise . charges: 0
entreprise . chiffre d'affaires: 50000
impôt . montant: 3876"
`;

exports[`calculate simulations-indépendant > cotisations minimales 1`] = `
"dirigeant . indépendant . cotisations et contributions . début activité: null
dirigeant . indépendant . revenu professionnel: 137
dirigeant . rémunération . cotisations: 1382
dirigeant . rémunération . net: 100
dirigeant . rémunération . net . après impôt: 100
dirigeant . rémunération . totale: 1482
entreprise . charges: 0
entreprise . chiffre d'affaires: 1482
impôt . montant: 0"
`;

exports[`calculate simulations-indépendant > cotisations minimales 2`] = `
"dirigeant . indépendant . cotisations et contributions . début activité: null
dirigeant . indépendant . revenu professionnel: 104
dirigeant . rémunération . cotisations: 160
dirigeant . rémunération . net: 100
dirigeant . rémunération . net . après impôt: 100
dirigeant . rémunération . totale: 260
entreprise . charges: 0
entreprise . chiffre d'affaires: 260
impôt . montant: 0"
`;

exports[`calculate simulations-indépendant > cotisations minimales 3`] = `
"dirigeant . indépendant . cotisations et contributions . début activité: null
dirigeant . indépendant . revenu professionnel: 830
dirigeant . rémunération . cotisations: 441
dirigeant . rémunération . net: 800
dirigeant . rémunération . net . après impôt: 800
dirigeant . rémunération . totale: 1241
entreprise . charges: 0
entreprise . chiffre d'affaires: 1241
impôt . montant: 0"
`;

exports[`calculate simulations-indépendant > exonération pension invalidité 1`] = `
"dirigeant . indépendant . cotisations et contributions . début activité: null
dirigeant . indépendant . revenu professionnel: 41483
dirigeant . rémunération . cotisations: 4736
dirigeant . rémunération . net: 40264
dirigeant . rémunération . net . après impôt: 34653
dirigeant . rémunération . totale: 45000
entreprise . charges: 0
entreprise . chiffre d'affaires: 45000
impôt . montant: 5611"
`;

exports[`calculate simulations-indépendant > exonération pension invalidité 2`] = `
"dirigeant . indépendant . cotisations et contributions . début activité: null
dirigeant . indépendant . revenu professionnel: 7000
dirigeant . rémunération . cotisations: 2241
dirigeant . rémunération . net: 6759
dirigeant . rémunération . net . après impôt: 6759
dirigeant . rémunération . totale: 9000
entreprise . charges: 0
entreprise . chiffre d'affaires: 9000
impôt . montant: 0"
`;

exports[`calculate simulations-indépendant > exonération pension invalidité 3`] = `
"dirigeant . indépendant . cotisations et contributions . début activité: 1006
dirigeant . indépendant . revenu professionnel: 9251
dirigeant . rémunération . cotisations: 1017
dirigeant . rémunération . net: 8983
dirigeant . rémunération . net . après impôt: 8983
dirigeant . rémunération . totale: 10000
entreprise . charges: 0
entreprise . chiffre d'affaires: 10000
impôt . montant: 0"
`;

exports[`calculate simulations-indépendant > exonération pension invalidité 4`] = `
"dirigeant . indépendant . cotisations et contributions . début activité: null
dirigeant . indépendant . revenu professionnel: 13355
dirigeant . rémunération . cotisations: 2049
dirigeant . rémunération . net: 12951
dirigeant . rémunération . net . après impôt: 12951
dirigeant . rémunération . totale: 15000
entreprise . charges: 0
entreprise . chiffre d'affaires: 15000
impôt . montant: 0"
`;

exports[`calculate simulations-indépendant > exonération âge 1`] = `
"dirigeant . indépendant . cotisations et contributions . début activité: null
dirigeant . indépendant . revenu professionnel: 39543
dirigeant . rémunération . cotisations: 16947
dirigeant . rémunération . net: 38053
dirigeant . rémunération . net . après impôt: 33025
dirigeant . rémunération . totale: 55000
entreprise . charges: 0
entreprise . chiffre d'affaires: 55000
impôt . montant: 5028"
`;

exports[`calculate simulations-indépendant > imposition à l'IS 1`] = `
"dirigeant . indépendant . cotisations et contributions . début activité: null
dirigeant . indépendant . revenu professionnel: 71868
dirigeant . rémunération . cotisations: 30844
dirigeant . rémunération . net: 69156
dirigeant . rémunération . net . après impôt: 56586
dirigeant . rémunération . totale: 100000
entreprise . charges: 0
entreprise . chiffre d'affaires: 100000
impôt . montant: 12570"
`;

exports[`calculate simulations-indépendant > imposition à l'IS 2`] = `
"dirigeant . indépendant . cotisations et contributions . début activité: null
dirigeant . indépendant . revenu professionnel: 71868
dirigeant . rémunération . cotisations: 30844
dirigeant . rémunération . net: 69156
dirigeant . rémunération . net . après impôt: 56586
dirigeant . rémunération . totale: 100000
entreprise . charges: 0
entreprise . chiffre d'affaires: 100000
impôt . montant: 12570"
`;

exports[`calculate simulations-indépendant > impôt sur le revenu 1`] = `
"dirigeant . indépendant . cotisations et contributions . début activité: null
dirigeant . indépendant . revenu professionnel: 20763
dirigeant . rémunération . cotisations: 8213
dirigeant . rémunération . net: 20000
dirigeant . rémunération . net . après impôt: 17924
dirigeant . rémunération . totale: 28213
entreprise . charges: 0
entreprise . chiffre d'affaires: 28213
impôt . montant: 2076"
`;

exports[`calculate simulations-indépendant > inversions 1`] = `
"dirigeant . indépendant . cotisations et contributions . début activité: null
dirigeant . indépendant . revenu professionnel: 591
dirigeant . rémunération . cotisations: 1460
dirigeant . rémunération . net: 540
dirigeant . rémunération . net . après impôt: 540
dirigeant . rémunération . totale: 2000
entreprise . charges: 0
entreprise . chiffre d'affaires: 2000
impôt . montant: 0"
`;

exports[`calculate simulations-indépendant > inversions 2`] = `
"dirigeant . indépendant . cotisations et contributions . début activité: null
dirigeant . indépendant . revenu professionnel: 42604
dirigeant . rémunération . cotisations: 19022
dirigeant . rémunération . net: 40978
dirigeant . rémunération . net . après impôt: 36309
dirigeant . rémunération . totale: 60000
entreprise . charges: 0
entreprise . chiffre d'affaires: 60001
impôt . montant: 4669"
`;

exports[`calculate simulations-indépendant > inversions 3`] = `
"dirigeant . indépendant . cotisations et contributions . début activité: null
dirigeant . indépendant . revenu professionnel: 10382
dirigeant . rémunération . cotisations: 4199
dirigeant . rémunération . net: 10000
dirigeant . rémunération . net . après impôt: 10000
dirigeant . rémunération . totale: 14199
entreprise . charges: 0
entreprise . chiffre d'affaires: 14199
impôt . montant: 0"
`;

exports[`calculate simulations-indépendant > inversions 4`] = `
"dirigeant . indépendant . cotisations et contributions . début activité: null
dirigeant . indépendant . revenu professionnel: 10382
dirigeant . rémunération . cotisations: 4199
dirigeant . rémunération . net: 10000
dirigeant . rémunération . net . après impôt: 10000
dirigeant . rémunération . totale: 14199
entreprise . charges: 1000
entreprise . chiffre d'affaires: 15199
impôt . montant: 0"
`;

exports[`calculate simulations-indépendant > inversions 5`] = `
"dirigeant . indépendant . cotisations et contributions . début activité: null
dirigeant . indépendant . revenu professionnel: 42155
dirigeant . rémunération . cotisations: 18800
dirigeant . rémunération . net: 40547
dirigeant . rémunération . net . après impôt: 36000
dirigeant . rémunération . totale: 59347
entreprise . charges: 0
entreprise . chiffre d'affaires: 59348
impôt . montant: 4547"
`;

exports[`calculate simulations-indépendant > inversions 6`] = `
"dirigeant . indépendant . cotisations et contributions . début activité: null
dirigeant . indépendant . revenu professionnel: 13949
dirigeant . rémunération . cotisations: 5564
dirigeant . rémunération . net: 13436
dirigeant . rémunération . net . après impôt: 13436
dirigeant . rémunération . totale: 19000
entreprise . charges: 1000
entreprise . chiffre d'affaires: 20000
impôt . montant: 0"
`;

exports[`calculate simulations-indépendant > inversions 7`] = `
"dirigeant . indépendant . cotisations et contributions . début activité: null
dirigeant . indépendant . revenu professionnel: 13206
dirigeant . rémunération . cotisations: 5280
dirigeant . rémunération . net: 12720
dirigeant . rémunération . net . après impôt: 12720
dirigeant . rémunération . totale: 18000
entreprise . charges: 2000
entreprise . chiffre d'affaires: 20000
impôt . montant: 0"
`;

exports[`calculate simulations-indépendant > échelle de revenus 1`] = `
"dirigeant . indépendant . cotisations et contributions . début activité: null
dirigeant . indépendant . revenu professionnel: 550
dirigeant . rémunération . cotisations: 1454
dirigeant . rémunération . net: 500
dirigeant . rémunération . net . après impôt: 500
dirigeant . rémunération . totale: 1954
entreprise . charges: 0
entreprise . chiffre d'affaires: 1954
impôt . montant: 0"
`;

exports[`calculate simulations-indépendant > échelle de revenus 2`] = `
"dirigeant . indépendant . cotisations et contributions . début activité: null
dirigeant . indépendant . revenu professionnel: 1066
dirigeant . rémunération . cotisations: 1543
dirigeant . rémunération . net: 1000
dirigeant . rémunération . net . après impôt: 1000
dirigeant . rémunération . totale: 2543
entreprise . charges: 0
entreprise . chiffre d'affaires: 2543
impôt . montant: 0"
`;

exports[`calculate simulations-indépendant > échelle de revenus 3`] = `
"dirigeant . indépendant . cotisations et contributions . début activité: null
dirigeant . indépendant . revenu professionnel: 1582
dirigeant . rémunération . cotisations: 1633
dirigeant . rémunération . net: 1500
dirigeant . rémunération . net . après impôt: 1500
dirigeant . rémunération . totale: 3133
entreprise . charges: 0
entreprise . chiffre d'affaires: 3133
impôt . montant: 0"
`;

exports[`calculate simulations-indépendant > échelle de revenus 4`] = `
"dirigeant . indépendant . cotisations et contributions . début activité: null
dirigeant . indépendant . revenu professionnel: 2098
dirigeant . rémunération . cotisations: 1722
dirigeant . rémunération . net: 2000
dirigeant . rémunération . net . après impôt: 2000
dirigeant . rémunération . totale: 3722
entreprise . charges: 0
entreprise . chiffre d'affaires: 3722
impôt . montant: 0"
`;

exports[`calculate simulations-indépendant > échelle de revenus 5`] = `
"dirigeant . indépendant . cotisations et contributions . début activité: null
dirigeant . indépendant . revenu professionnel: 5194
dirigeant . rémunération . cotisations: 2261
dirigeant . rémunération . net: 5000
dirigeant . rémunération . net . après impôt: 5000
dirigeant . rémunération . totale: 7261
entreprise . charges: 0
entreprise . chiffre d'affaires: 7261
impôt . montant: 0"
`;

exports[`calculate simulations-indépendant > échelle de revenus 6`] = `
"dirigeant . indépendant . cotisations et contributions . début activité: null
dirigeant . indépendant . revenu professionnel: 10382
dirigeant . rémunération . cotisations: 4199
dirigeant . rémunération . net: 10000
dirigeant . rémunération . net . après impôt: 10000
dirigeant . rémunération . totale: 14199
entreprise . charges: 0
entreprise . chiffre d'affaires: 14199
impôt . montant: 0"
`;

exports[`calculate simulations-indépendant > échelle de revenus 7`] = `
"dirigeant . indépendant . cotisations et contributions . début activité: null
dirigeant . indépendant . revenu professionnel: 103809
dirigeant . rémunération . cotisations: 40389
dirigeant . rémunération . net: 100000
dirigeant . rémunération . net . après impôt: 73493
dirigeant . rémunération . totale: 140389
entreprise . charges: 0
entreprise . chiffre d'affaires: 140389
impôt . montant: 26507"
`;

exports[`calculate simulations-indépendant > échelle de revenus 8`] = `
"dirigeant . indépendant . cotisations et contributions . début activité: null
dirigeant . indépendant . revenu professionnel: 1033741
dirigeant . rémunération . cotisations: 242707
dirigeant . rémunération . net: 1000000
dirigeant . rémunération . net . après impôt: 529234
dirigeant . rémunération . totale: 1242707
entreprise . charges: 0
entreprise . chiffre d'affaires: 1242707
impôt . montant: 470766"
`;
